--- a/src/index.jade
+++ b/src/index.jade
@@ -39,6 +39,35 @@ html
               source(src="https://archive.org/download/DaftPunkTronLegacyEncomPartIi/DaftPunkTronLegacyEncomPartIi.mp3" type="audio/mpeg")
 
       section
+        .content
+          h2 Timeline
+          ul
+            li Oct 2014: Idea
+            li June 2015: Let's do this!
+
+      section
+        .content
+          h2 Investment
+          ul
+            li ~30 hours across group, Total 90 hours person hrs
+            li Worked lunch, nights and 1 whole day (my garage)
+            li ~$450 for all hardware including fridge
+
+      section
+        .content
+          h2 What
+          ul
+            li Smart IoT Beverage Dispenser
+            li Custom Developed Software
+            li Mix of BBB and Custom HW
+            li Modified Fridge and more
+            li All DIY
+
+      section
+        .fullscreen
+          img.fillh(src="images/usecases.jpg")
+
+      section
         .fullscreen
           x-gif(src='images/perfect_beardscratch.gif' fill stopped)
         .content.bottom
@@ -48,7 +77,7 @@ html
         .fullscreen
           x-gif(src='images/beerdrink.gif' fill n-times="1" speed="1.5" stopped)
         .content.bottom
-          .box.quote Lesson: Change from <span class="alert alert-danger">root</span> user
+          .box.quote Lesson: Drink up :)
 
       section
         .fullscreen
