--- a/src/styles/_backgrounds.scss
+++ b/src/styles/_backgrounds.scss
@@ -156,3 +156,55 @@
   background-size:80px 80px;
   background-position:0 0, 40px 40px;
 }
+
+// http://www.transparenttextures.com/
+
+.tint {
+  background-color: #004e8a;
+}
+.organic {
+  background-color: #472f00;
+}
+
+.blackthread {
+  background-image: url("../images/patterns/black-thread-light.png");
+}
+.diagmonds {
+  background-image: url("../images/patterns/diagmonds-light.png");
+}
+.gplay {
+  background-image: url("../images/patterns/gplay.png");
+}
+.oldmath {
+  background-image: url("../images/patterns/old-mathematics.png");
+}
+.purtywood {
+  background-image: url("../images/patterns/purty-wood.png");
+}
+.bullseyes {
+  background-image: url("../images/patterns/strange-bullseyes.png");
+}
+.straws {
+  background-image: url("../images/patterns/straws.png");
+}
+.subtlegrey {
+  background-image: url("../images/patterns/subtle-grey.png");
+}
+.woodtilecolor {
+  background-image: url("../images/patterns/tileable-wood-colored.png");
+}
+.woodtile {
+  background-image: url("../images/patterns/tileable-wood.png");
+}
+.treebark {
+  background-image: url("../images/patterns/tree-bark.png");
+}
+.washi {
+  background-image: url("../images/patterns/washi.png");
+}
+.wood-pattern {
+  background-image: url("../images/patterns/wood-pattern.png");
+}
+.xv {
+  background-image: url("../images/patterns/xv.png");
+}
