--- a/src/styles/_backgrounds.scss
+++ b/src/styles/_backgrounds.scss
@@ -162,18 +162,36 @@
 .tint {
   background-color: #004e8a;
 }
+.lighttint{
+  background-color: #168e9e;
+}
 .organic {
   background-color: #472f00;
+}
+.light {
+  background-color: #cfcfcf;
 }
 
 .blackthread {
   background-image: url("../images/patterns/black-thread-light.png");
 }
+.brickwalldark {
+  background-image: url("../images/patterns/brick-wall-dark.png");
+}
+.brickwall {
+  background-image: url("../images/patterns/brick-wall.png");
+}
 .diagmonds {
   background-image: url("../images/patterns/diagmonds-light.png");
 }
+.diamondupholstery {
+  background-image: url("../images/patterns/diamond-upholstery.png");
+}
 .gplay {
   background-image: url("../images/patterns/gplay.png");
+}
+.gravel {
+  background-image: url("../images/patterns/gravel.png");
 }
 .oldmath {
   background-image: url("../images/patterns/old-mathematics.png");
@@ -183,6 +201,9 @@
 }
 .bullseyes {
   background-image: url("../images/patterns/strange-bullseyes.png");
+}
+.escheresque {
+  background-image: url("../images/patterns/escheresque.png");
 }
 .straws {
   background-image: url("../images/patterns/straws.png");
