--- a/src/index.jade
+++ b/src/index.jade
@@ -150,6 +150,18 @@ html
 
       section
         .fullscreen
+          img.fillh(src="images/admin_dashboard.png")
+          
+      section
+        .fullscreen
+          img.fillh(src="images/admin_configs.png")
+
+      section
+        .fullscreen
+          img.fillh(src="images/admin_users.png")
+
+      section
+        .fullscreen
         .content
           h2 Challenges
           ul
