--- a/src/index.jade
+++ b/src/index.jade
@@ -151,7 +151,7 @@ html
       section
         .fullscreen
           img.fillh(src="images/admin_dashboard.png")
-          
+
       section
         .fullscreen
           img.fillh(src="images/admin_configs.png")
@@ -204,6 +204,8 @@ html
             h4 \[._.]/ Adam Eivy
             h6 Slides:
               a(href='http://bit.ly/diykeg') &nbsp; bit.ly/diykeg
+            h6 Code:
+              a(href='https://github.com/atomantic/kegiot') &nbsp; github.com/atomantic/kegiot
             h6 Twitter:
               a(href='https://twitter.com/antic') &nbsp; @antic
             small: a(href='#1') &nbsp; restart
