--- a/src/index.jade
+++ b/src/index.jade
@@ -62,6 +62,10 @@ html
           h2 The Team
           img.fillh.solo(src="images/team.jpg")
 
+      section.fullscreen
+        .content
+          img(src="images/step1.jpg")
+
       section.fullscreen.xv.organic
         .content
           .box
@@ -169,6 +173,10 @@ html
             li Stepping Voltage (Fried Temp Sensor)
             li IC2 and Foreign HW
             li USB Drivers & Uptime
+
+      section.fullscreen
+        .content
+          img.solo(src="images/flange.jpg")
 
       section
         .fullscreen
