--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -533,7 +533,7 @@ img.smallish {
 :not(pre) > code[class*="language-"] {
     padding:10px
 }
-
+/*
 .content img {
   border: 0.13em solid rgb(84, 84, 84);
   box-shadow: black 1px 1px 0.3em -0.1em inset;
@@ -542,7 +542,7 @@ img.smallish {
 .content img.solo{
   border:none;
   box-shadow:none;
-}
+}*/
 
 @keyframes cursor {
   0% {
