compatible policy options independent of synergized incremental programming

--- a/src/index.jade
+++ b/src/index.jade
@@ -35,7 +35,7 @@ html
               h4 Adam Eivy <span class="rotate">\[._.]/</span>
                 .me.center
 
-      section.fullscreen.gplay.tint
+      section.fullscreen.oldmath
         .content
           .box
             h2 What
@@ -59,19 +59,36 @@ html
       section
         .fullscreen
         .content
-          h2 The Team
+          h3 The Team
           img.fillh.solo(src="images/team.jpg")
 
       section.fullscreen
         .content
           img(src="images/step1.jpg")
 
+
+      section.fullscreen
+        .content
+          img(src="images/process_lcd.jpg")
+
+
+
+      section.fullscreen
+        .content
+          img(src="images/process_assembly.jpg")
+
+
+      section.fullscreen
+        .content
+          img(src="images/process_rfidcards.jpg")
+
       section.fullscreen.xv.organic
         .content
           .box
             h2 Investment
             ul
-              li ~30 hours across group, Total 90 hours person hrs
+              li ~30 hours together
+              li ~90 individual person hours
               li Worked lunch, nights and 1 whole day (my garage)
               li ~$450 for all hardware including fridge
 
@@ -86,13 +103,14 @@ html
           img.solo(src="images/kegiot_hla.svg",height="100%")
 
       section
-        .fullscreen
+        .fullscreen.fullscreen.gplay
         .content
-          h2 The Basics
-          ul
-            li Danby Mini Fridge (Costco)
-            li CO2 Tank, 5 Lbs
-            li Corny Key, 5 Gal
+          .box.darken
+            h2 The Basics
+            ul
+              li Danby Mini Fridge (Costco)
+              li CO2 Tank, 5 Lbs
+              li Corny Key, 5 Gal
 
       section
         .fullscreen
@@ -176,7 +194,7 @@ html
 
       section.fullscreen
         .content
-          img.solo(src="images/flange.jpg")
+          img.solo(src="images/spigot.jpg")
 
       section
         .fullscreen
@@ -196,17 +214,17 @@ html
           .box.quote Lesson: Change from <span class="alert alert-danger">root</span> user
 
       section
-        .fullscreen
+        .fullscreen(ui-fx="blur3")
           x-gif(src='images/beerdrink.gif' fill n-times="1" speed="1.5" stopped)
         .content.bottom
           .box.quote Lesson: Drink up :)
 
       section
-        .fullscreen(ui-fx="blur1")
-          x-gif(src="images/end.gif" fill stopped)
+        .fullscreen(ui-fx="blur3")
+          x-gif(src="images/drink.gif" fill stopped speed=".5")
         .content(data-bespoke-state='light')
           div.box.darken
-            .mid Thanks!
+            .mid Questions?
             .line
               .me.center
             h4 \[._.]/ Adam Eivy
