--- a/src/styles/_backgrounds.scss
+++ b/src/styles/_backgrounds.scss
@@ -39,6 +39,9 @@
 [ui-fx~="blur2"] {
   filter: blur(2px);
 }
+[ui-fx~="blur3"] {
+  filter: blur(3px);
+}
 [ui-fx~="dark50%"] {
   opacity: 0.5;
 }
