--- a/src/index.jade
+++ b/src/index.jade
@@ -190,7 +190,9 @@ html
             li We suck at industrial design
             li Stepping Voltage (Fried Temp Sensor)
             li IC2 and Foreign HW
-            li USB Drivers & Uptime
+            li RFID/USB Disconnecting
+            li Filling Corny Kegs
+            li Cleaning the Valve
 
       section.fullscreen
         .content
