--- a/src/styles/_backgrounds.scss
+++ b/src/styles/_backgrounds.scss
@@ -208,6 +208,9 @@
 .escheresque {
   background-image: url("../images/patterns/escheresque.png");
 }
+.randomgrey {
+  background-image: url("../images/patterns/random-grey-variations.png");
+}
 .straws {
   background-image: url("../images/patterns/straws.png");
 }
