--- a/src/index.jade
+++ b/src/index.jade
@@ -232,7 +232,7 @@ html
               .me.center
             h4 \[._.]/ Adam Eivy
             h6 Slides:
-              a(href='http://bit.ly/diykeg') &nbsp; bit.ly/diykeg
+              a(href='http://bit.ly/kegiot') &nbsp; bit.ly/kegiot
             h6 Code:
               a(href='https://github.com/atomantic/kegiot') &nbsp; github.com/atomantic/kegiot
             h6 Twitter:
