--- a/src/index.jade
+++ b/src/index.jade
@@ -228,21 +228,23 @@ html
 
       section
         .fullscreen
+          img.fillh(src="images/parts.jpg")
         .content
-          h2 Parts
-          ul.tight
-            li: a(target="ebay", href="http://www.newark.com/element14/bbone-black-4g/beaglebone-black-rev-c-cortex/dp/52X5548?CMP=KNC-GUSA-GEN-SHOPPING-NEW-ELEMENT14&ad=81605889141&gclid=CjwKEAjwubK4BRC1xczKrZyj3mkSJAC6ntgru3xrlhe3PNunJVF3JnYOihhrgXcyFkMfnMyDIMERsxoCAvzw_wcB") Beagle Bone Black
-            li: a(target="ebay", href="http://www.ebay.com/itm/New-Blue-IIC-I2C-TWI-1602-16x2-Serial-LCD-Module-Display-for-Arduino-/221439853893?hash=item338ed80545:g:Y~MAAOxycD9TTI1f") LCD
-            li: a(target="ebay", href="http://www.ebay.com/itm/10Pcs-L293D-L293-Push-Pull-Four-Channel-Motor-Driver-IC-DIP-16-NEW-GM-/262136736016?hash=item3d08912910:g:h-kAAOSwSHZWe2oz") Push-Pull 4 Channel Motor Driver
-            li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-4-Channel-I2C-IIC-Logic-Level-Converter-Module-Bi-Directional-for-Arduino-/201384052982?hash=item2ee36cc8f6:g:SJAAAOSw3ydVm2Z9") I2C IIC Logic Level Converter Module
-            li: a(target="ebay", href="http://www.ebay.com/itm/New-ATMEGA328-5V-16Mhz-Replace-ATmega168-For-Arduino-Pro-Mini-Compatible-Nano-/191117208428?hash=item2c7f792b6c:g:-PgAAOxyjxlTNTP8") ATMEGA328
-            li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-TMP36GT9-ORIGINAL-Low-Voltage-Temperature-Sensors-NEW-/381374564339?hash=item58cbb207f3:g:5XYAAOSwcwhVKm5O") Temperature Sensors
-            li: a(target="ebay", href="http://www.ebay.com/itm/50Pairs-15cm-SM-3Pin-22AWG-Wire-Male-and-Female-Connectors-Pitch-2-54mm-/171927560780?hash=item2807ae624c:g:ZhYAAOSwG-1W1asC") Wire Connectors
-            li: a(target="ebay", href="http://www.ebay.com/itm/New-DC12V-1-2-SS304-Motorized-Ball-Valve-CR-05-Electrical-Ball-Valve-US-Stock-/321746225244?hash=item4ae991c85c:g:3lAAAOSwPcJVSDrQ") Motorized Ball Valve
-            li: a(target="ebay", href="http://www.ebay.com/itm/One-25ft-Roll-Electrical-Wire-22-Gauge-Solid-Core-22awg-/111943223318?var=&hash=item1a10560816:m:mSMMrphVViaZ6u9KpMr6_qw") Wire
-            li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-Double-side-Protoboard-Circuit-Universal-DIY-Prototype-PCB-Board-6x8cm-New-/371389482753?hash=item567889c701:g:3HMAAOSwHnFVrMSr") Protoboard
-            li: a(target="ebay", href="http://www.ebay.com/itm/10-Pcs-40Pin-2-54mm-Single-Row-Straight-Female-Pin-Header-for-Arduino-USA-Seller-/181904105863?hash=item2a5a546187:g:jHwAAOSwT6pVlF85") Female Pin Header
-            li: a(target="ebay", href="http://www.ebay.com/itm/ATMEL-ATTINY84A-PU-8-Bit-Microcontroller-Low-Power-High-Performance-Attiny-/231792924328?hash=item35f7ef56a8:g:tawAAOSwhkRWe6J9") 8 Bit Microcontroller
+          .box.darken
+            h2 Parts
+            ul.tight
+              li: a(target="ebay", href="http://www.newark.com/element14/bbone-black-4g/beaglebone-black-rev-c-cortex/dp/52X5548?CMP=KNC-GUSA-GEN-SHOPPING-NEW-ELEMENT14&ad=81605889141&gclid=CjwKEAjwubK4BRC1xczKrZyj3mkSJAC6ntgru3xrlhe3PNunJVF3JnYOihhrgXcyFkMfnMyDIMERsxoCAvzw_wcB") Beagle Bone Black
+              li: a(target="ebay", href="http://www.ebay.com/itm/New-Blue-IIC-I2C-TWI-1602-16x2-Serial-LCD-Module-Display-for-Arduino-/221439853893?hash=item338ed80545:g:Y~MAAOxycD9TTI1f") LCD
+              li: a(target="ebay", href="http://www.ebay.com/itm/10Pcs-L293D-L293-Push-Pull-Four-Channel-Motor-Driver-IC-DIP-16-NEW-GM-/262136736016?hash=item3d08912910:g:h-kAAOSwSHZWe2oz") Push-Pull 4 Channel Motor Driver
+              li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-4-Channel-I2C-IIC-Logic-Level-Converter-Module-Bi-Directional-for-Arduino-/201384052982?hash=item2ee36cc8f6:g:SJAAAOSw3ydVm2Z9") I2C IIC Logic Level Converter Module
+              li: a(target="ebay", href="http://www.ebay.com/itm/New-ATMEGA328-5V-16Mhz-Replace-ATmega168-For-Arduino-Pro-Mini-Compatible-Nano-/191117208428?hash=item2c7f792b6c:g:-PgAAOxyjxlTNTP8") ATMEGA328
+              li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-TMP36GT9-ORIGINAL-Low-Voltage-Temperature-Sensors-NEW-/381374564339?hash=item58cbb207f3:g:5XYAAOSwcwhVKm5O") Temperature Sensors
+              li: a(target="ebay", href="http://www.ebay.com/itm/50Pairs-15cm-SM-3Pin-22AWG-Wire-Male-and-Female-Connectors-Pitch-2-54mm-/171927560780?hash=item2807ae624c:g:ZhYAAOSwG-1W1asC") Wire Connectors
+              li: a(target="ebay", href="http://www.ebay.com/itm/New-DC12V-1-2-SS304-Motorized-Ball-Valve-CR-05-Electrical-Ball-Valve-US-Stock-/321746225244?hash=item4ae991c85c:g:3lAAAOSwPcJVSDrQ") Motorized Ball Valve
+              li: a(target="ebay", href="http://www.ebay.com/itm/One-25ft-Roll-Electrical-Wire-22-Gauge-Solid-Core-22awg-/111943223318?var=&hash=item1a10560816:m:mSMMrphVViaZ6u9KpMr6_qw") Wire
+              li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-Double-side-Protoboard-Circuit-Universal-DIY-Prototype-PCB-Board-6x8cm-New-/371389482753?hash=item567889c701:g:3HMAAOSwHnFVrMSr") Protoboard
+              li: a(target="ebay", href="http://www.ebay.com/itm/10-Pcs-40Pin-2-54mm-Single-Row-Straight-Female-Pin-Header-for-Arduino-USA-Seller-/181904105863?hash=item2a5a546187:g:jHwAAOSwT6pVlF85") Female Pin Header
+              li: a(target="ebay", href="http://www.ebay.com/itm/ATMEL-ATTINY84A-PU-8-Bit-Microcontroller-Low-Power-High-Performance-Attiny-/231792924328?hash=item35f7ef56a8:g:tawAAOSwhkRWe6J9") 8 Bit Microcontroller
 
       section.fullscreen
         .content
