--- a/src/index.jade
+++ b/src/index.jade
@@ -245,6 +245,7 @@ html
               li: a(target="ebay", href="http://www.ebay.com/itm/5pcs-Double-side-Protoboard-Circuit-Universal-DIY-Prototype-PCB-Board-6x8cm-New-/371389482753?hash=item567889c701:g:3HMAAOSwHnFVrMSr") Protoboard
               li: a(target="ebay", href="http://www.ebay.com/itm/10-Pcs-40Pin-2-54mm-Single-Row-Straight-Female-Pin-Header-for-Arduino-USA-Seller-/181904105863?hash=item2a5a546187:g:jHwAAOSwT6pVlF85") Female Pin Header
               li: a(target="ebay", href="http://www.ebay.com/itm/ATMEL-ATTINY84A-PU-8-Bit-Microcontroller-Low-Power-High-Performance-Attiny-/231792924328?hash=item35f7ef56a8:g:tawAAOSwhkRWe6J9") 8 Bit Microcontroller
+              li: a(target="ebay", href="http://www.amazon.com/Perfect-Pour-Chalkboard-Display-Kegerator/dp/B00TOORL1Y/ref=sr_1_4?ie=UTF8&qid=1460611986&sr=8-4&keywords=tap+handle") Chalkboard Tap Handle
 
       section.fullscreen
         .content
