--- a/src/index.jade
+++ b/src/index.jade
@@ -208,6 +208,8 @@ html
           x-gif(src='images/perfect_beardscratch.gif' fill stopped)
         .content.bottom
           .box.quote <span class="alert alert-success">Lesson:</span> Change from <span class="alert alert-danger">root</span> user
+        .credit cinema gif credit:&nbsp;
+          a(href="http://www.gideondevilliers.com") gideon de villiers
 
       section
         .fullscreen(ui-fx="blur3")
