--- a/src/index.jade
+++ b/src/index.jade
@@ -208,7 +208,7 @@ html
           x-gif(src='images/perfect_beardscratch.gif' fill stopped)
         .content.bottom
           .box.quote <span class="alert alert-success">Lesson:</span> Change from <span class="alert alert-danger">root</span> user
-        .credit cinema gif thanks to :&nbsp;
+        .credit cinemagraph thanks to :&nbsp;
           a(href="http://www.gideondevilliers.com") gideon de villiers
 
       section
