--- a/src/index.jade
+++ b/src/index.jade
@@ -258,20 +258,9 @@ html
 
       section
         .fullscreen
-        .content
-          h2 Next Steps
-          ul
-            li Log Rotation
-            li Wifi
-            li Improve USB/RFID Disconnect Handling
-            li Analytics
-            li Replace Fried Temp Sensor
-
-      section
-        .fullscreen
           img.fillh(src="images/parts.jpg")
         .content
-          .box.darken
+          .box.darker
             h2 Parts
             ul.tight
               li: a(target="ebay", href="http://www.newark.com/element14/bbone-black-4g/beaglebone-black-rev-c-cortex/dp/52X5548?CMP=KNC-GUSA-GEN-SHOPPING-NEW-ELEMENT14&ad=81605889141&gclid=CjwKEAjwubK4BRC1xczKrZyj3mkSJAC6ntgru3xrlhe3PNunJVF3JnYOihhrgXcyFkMfnMyDIMERsxoCAvzw_wcB") Beagle Bone Black
@@ -291,6 +280,17 @@ html
       section.fullscreen
         .content
           img.fillh(src="images/flange.jpg")
+
+      section
+        .fullscreen
+        .content
+          h2 Next Steps
+          ul
+            li Log Rotation
+            li Wifi
+            li Improve USB/RFID Disconnect Handling
+            li Analytics
+            li Replace Fried Temp Sensor
 
       section.fullscreen
         img.fillw(src="images/clink.jpeg")
