--- a/src/index.jade
+++ b/src/index.jade
@@ -175,6 +175,23 @@ html
       section
         .fullscreen
         .content
+          h2 LCD
+          pre: code.language-javascript.
+            ...
+            clear: function(cb) {
+              // console.log('lcd:clear');
+              runCommand('i2cset -y 1 0x04 0x63 0x40 0x00 0x00 i', cb);
+            },
+            home: function(cb) {
+              // console.log('lcd:home');
+              runCommand('i2cset -y 1 0x04 0x68 0x40 0x00 0x00 i', cb);
+            },
+            print: function(str, cb) {
+            ...
+
+      section
+        .fullscreen
+        .content
           h2 Slack Integration
           ul
             li Cheap Admin Discovery
