--- a/src/index.jade
+++ b/src/index.jade
@@ -35,6 +35,8 @@ html
             .line
               h4 Adam Eivy <span class="rotate">\[._.]/</span>
                 .me.center
+            h6 Slides:
+              a(href='http://bit.ly/kegiot') &nbsp; bit.ly/kegiot
 
       section.fullscreen.oldmath
         .content
@@ -125,7 +127,9 @@ html
           .box
             h2: a(href="http://beagleboard.org/support/bonescript") BoneScript
             .mid or
-            h2 Just Use System Commands
+            h2 Node (fs, etc)
+            .mid or
+            h2 Linux System Commands (i2c, etc)
 
       section.fullscreen
         .content
@@ -318,7 +322,7 @@ html
             .mid Questions?
             .line
               .me.center
-            h4 \[._.]/ Adam Eivy
+            h4 \[._.]/ <a href='http://adameivy.com'>Adam Eivy</a>
             h6 Slides:
               a(href='http://bit.ly/kegiot') &nbsp; bit.ly/kegiot
             h6 Code:
